k8s/overleaf/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: mongo
    spec:
      containers:
        - args:
            - --replSet
            - overleaf
          image: mongo:6.0
          livenessProbe:
            exec:
              command:
                - echo 'db.stats().ok' | mongosh localhost:27017/test --quiet
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: mongo
          volumeMounts:
            - mountPath: /data/db
              name: mongo-claim0
            - mountPath: /docker-entrypoint-initdb.d/mongodb-init-replica-set.js
              name: mongo-cm1
              subPath: mongodb-init-replica-set.js
      restartPolicy: Always
      volumes:
        - name: mongo-claim0
          persistentVolumeClaim:
            claimName: mongo-claim0
        - configMap:
            items:
              - key: mongodb-init-replica-set.js
                path: mongodb-init-replica-set.js
            name: mongo-cm1
          name: mongo-cm1
