k8s/overleaf/sharelatex-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: sharelatex
  name: sharelatex
spec:
  ports:
    - name: "8040"
      port: 8040
      targetPort: 80
  selector:
    io.kompose.service: sharelatex
